# openstat-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: data.csv  demo.ost
src/openstat/: __init__.py  __main__.py  cli.py  config.py  i18n.py  logging_config.py  repl.py  script_runner.py  session.py  types.py
src/openstat/backends/: __init__.py  duckdb_backend.py  polars_backend.py
src/openstat/commands/: __init__.py  adv_stat_cmds.py  advanced_ml_cmds.py  advreg_cmds.py  alias_cmds.py  arch_cmds.py  arules_cmds.py  automodel_cmds.py  backend_cmds.py  base.py  bayes_cmds.py  causal_cmds.py  cluster_cmds.py  data_cmds.py  datamanip_cmds.py  dataquality_cmds.py  datetime_cmds.py  dimreduce_cmds.py  discrete_cmds.py  dsl_cmds.py  epi_cmds.py  equiv_tobit_cmds.py  esttab_cmds.py  export_beamer_cmds.py  export_cmds.py  export_extra_cmds.py  factor_cmds.py  groupby_cmds.py  help_cmds.py  i18n_cmds.py  import_extra_cmds.py  influence_cmds.py  iv_cmds.py  manova_cmds.py  mediate_cmds.py  meta_cmds.py  mi_cmds.py  mixed_cmds.py  mixture_changepoint_cmds.py  ml_adv_cmds.py  (+35 more)
src/openstat/dsl/: parser.py  tokenizer.py
src/openstat/io/: loader.py
src/openstat/jupyter/: __init__.py  display.py  magic.py
src/openstat/plots/: plotter.py  surv_plots.py  ts_plots.py
src/openstat/plugins/: __init__.py  manager.py
src/openstat/reporting/: eda.py  report.py
src/openstat/stats/: advanced_regression.py  arch_garch.py  bayesian.py  causal.py  clustering.py  discrete.py  epidemiology.py  equiv_tobit.py  factor.py  imputation.py  influence.py  iv.py  manova.py  mixed.py  ml.py  ml_advanced.py  model_eval.py  models.py  nonparametric.py  panel.py  power.py  resampling.py  survey.py  survival.py  timeseries.py  ts_advanced.py
src/openstat/web/: __init__.py  app.py  session_manager.py
src/openstat/web/static/: app.js  index.html  style.css
tests/: test_advreg.py  test_backends.py  test_bayes.py  test_causal.py  test_clustering.py  test_commands.py  test_data_v040.py  test_dataquality.py  test_discrete.py  test_epidemiology.py  test_equiv_tobit.py  test_esttab.py  test_export.py  test_factor.py  test_file_formats.py  test_imputation.py  test_influence.py  test_integration.py  test_iv.py  test_jupyter.py  test_manova.py  test_mixed.py  test_ml.py  test_ml_advanced.py  test_model_eval.py  test_models.py  test_nonparam.py  test_outreg.py  test_panel.py  test_parser.py  test_plugins.py  test_power.py  test_resampling.py  test_reshape.py  test_round4.py  test_round5.py  test_round6.py  test_round7.py  test_round8.py  test_session.py  (+7 more)
