[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstat"
version = "0.2.0"
description = "Open-source statistical analysis tool with interactive REPL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenStat Contributors" },
]
keywords = ["statistics", "data-analysis", "regression", "cli", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "statsmodels>=0.14",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
excel = [
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
]
stata = [
    "pyreadstat>=1.0",
    "pandas>=2.0",
]

[project.scripts]
openstat = "openstat.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openstat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
